--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,59 +17,20 @@ version = "0.34.0"
 rust-version = "1.74"
 
 [dependencies]
-aes = "0.8.4"
-cbc = "0.1.2"
-chrono = { version = "0.4", optional = true, default-features = false, features = [
-    "std",
-    "clock",
-] }
 encoding_rs = "0.8.32"
 flate2 = "1.0"
-image = { version = "0.25", optional = true }
 indexmap = "2.2.3"
-itoa = "1.0"
 log = "0.4"
-md-5 = "0.10"
-nom = { version = "7.1", optional = true }
-nom_locate = { version = "4.2.0", optional = true }
-rangemap = "1.5"
-rayon = { version = "1.6", optional = true }
-serde = { version = "1.0", features = ["derive"], optional = true }
-thiserror = "2.0.3"
-time = { version = "0.3", features = ["formatting", "parsing"] }
-tokio = { version = "1", features = ["fs", "io-util"], optional = true }
+nom = "7.1"
+nom_locate = "4.2.0"
 weezl = "0.1"
-
-[dev-dependencies]
-clap = { version = "4.0", features = ["derive"] }
-env_logger = "0.11"
-serde_json = "1.0"
-shellexpand = "3.0"
-tempfile = "3.3"
-
-[features]
-async = ["tokio/rt-multi-thread", "tokio/macros"]
-chrono_time = ["chrono"]
-default = ["chrono_time", "nom_parser", "rayon"]
-embed_image = ["image"]
-nom_parser = ["nom", "nom_locate"]
-serde = ["dep:serde"]
-
-[[example]]
-name = "extract_toc"
-required-features = ["serde"]
+rangemap = "1.5"
+md-5 = "0.10.6"
+rayon = "1.10.0"
 
 [[example]]
 name = "extract_text"
 required-features = ["serde"]
-
-[[example]]
-name = "print_annotations"
-required-features = ["default"]
-
-[[example]]
-name = "rotate"
-required-features = ["nom_parser"]
 
 [badges]
 travis-ci = { repository = "J-F-Liu/lopdf" }
